--- a/TypeModal.xaml
+++ b/TypeModal.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HCI_Projekat2"
         mc:Ignorable="d"
-        Title="Type" Height="500" Width="500" Closing="Closing_Click">
+        Title="Type" Height="500" Width="500" Closing="Closing_Click"
+        FontSize="14">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"></RowDefinition>
