--- a/TagModal.xaml
+++ b/TagModal.xaml
@@ -8,6 +8,9 @@
         mc:Ignorable="d"
         Title="TagModal" Height="450" Width="800" Closing="Closing_Click"
         FontSize="14">
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Help" Executed="CommandBinding_Executed"/>
+    </Window.CommandBindings>
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"></RowDefinition>
@@ -23,16 +26,16 @@
             <ColumnDefinition Width="2*"></ColumnDefinition>
             <ColumnDefinition Width="0.1*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="4" Grid.Column="0" Content="Color:" HorizontalAlignment="Right"></Label>
+        <Label Grid.Row="4" Grid.Column="0" Content="Color:" HorizontalAlignment="Right" local:HelpProvider.HelpKey="ModalTag"></Label>
         <Label Name="Warning_Color" Grid.Row="4" Grid.Column="2" Content="*" FontSize="24" Foreground="Red"/>
-        <xctk:ColorPicker Name="ColorPicker" Grid.Row ="4" Grid.Column="1" SelectedColor="{Binding TagThis.Color.Color, Mode=OneWay}" Height="26" VerticalAlignment="Top" DisplayColorAndName="True"/>
+        <xctk:ColorPicker local:HelpProvider.HelpKey="ModalTag" Name="ColorPicker" Grid.Row ="4" Grid.Column="1" SelectedColor="{Binding TagThis.Color.Color, Mode=OneWay}" Height="26" VerticalAlignment="Top" DisplayColorAndName="True"/>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="Label:" HorizontalAlignment="Right"></Label>
+        <Label Grid.Row="0" Grid.Column="0" Content="Label:" HorizontalAlignment="Right" local:HelpProvider.HelpKey="ModalTag"></Label>
         <Label Name="Warning_Label" Grid.Row="0" Grid.Column="2" Content="*" FontSize="24" Foreground="Red"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Name="TxtLabel" Text="{Binding TagThis.Label, Mode=OneWay}"></TextBox>
+        <TextBox Grid.Row="0" Grid.Column="1" Name="TxtLabel" Text="{Binding TagThis.Label, Mode=OneWay}" local:HelpProvider.HelpKey="ModalTag"></TextBox>
 
-        <Label Grid.Row="2" Grid.Column="0" Content="Description:" HorizontalAlignment="Right"></Label>
-        <TextBox Grid.Row="2" Grid.Column="1" Name="TxtDescription" Text="{Binding TagThis.Description, Mode=OneWay}"></TextBox>
+        <Label Grid.Row="2" Grid.Column="0" Content="Description:" HorizontalAlignment="Right" local:HelpProvider.HelpKey="ModalTag"></Label>
+        <TextBox Grid.Row="2" Grid.Column="1" Name="TxtDescription" Text="{Binding TagThis.Description, Mode=OneWay}" local:HelpProvider.HelpKey="ModalTag"></TextBox>
 
         <StackPanel Grid.Row="11" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="60" Margin="15 0" Click="Button_Click_1">Submit</Button>
