--- a/TagModal.xaml
+++ b/TagModal.xaml
@@ -35,7 +35,7 @@
         <TextBox Grid.Row="0" Grid.Column="1" Name="TxtLabel" Text="{Binding TagThis.Label, Mode=OneWay}" local:HelpProvider.HelpKey="ModalTag"></TextBox>
 
         <Label Grid.Row="2" Grid.Column="0" Content="Description:" HorizontalAlignment="Right" local:HelpProvider.HelpKey="ModalTag"></Label>
-        <TextBox Grid.Row="2" Grid.Column="1" Name="TxtDescription" Text="{Binding TagThis.Description, Mode=OneWay}" local:HelpProvider.HelpKey="ModalTag"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="1" Name="TxtDescription" Text="{Binding TagThis.Description, Mode=OneWay}" local:HelpProvider.HelpKey="ModalTag" TextWrapping="Wrap"></TextBox>
 
         <StackPanel Grid.Row="11" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="60" Margin="15 0" Click="Button_Click_1">Submit</Button>
